--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "TariqNew",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^6.8.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "router": "^2.2.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prisma": "^6.8.2"
   }
 }
