--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
     "router": "^2.2.0"
   },
   "devDependencies": {
